syntax = "proto3";
package finschia.or.da.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "finschia/or/da/v1/params.proto";
import "finschia/or/da/v1/da.proto";

option go_package = "github.com/Finschia/finschia-sdk/x/or/da/types";

// Msg defines the Msg service.
service Msg {
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  rpc RegisterRollup(MsgRegisterRollup) returns (MsgRegisterRollupResponse);

  // Allow the sequencer to append a batch of transactions.
  rpc AppendCTCBatch(MsgAppendCTCBatch) returns (MsgAppendCTCBatchResponse);

  // Add a L2 transaction to the queue to process forcibly.
  rpc Enqueue(MsgEnqueue) returns (MsgEnqueueResponse);

  // Allow the proposer to append a state batch
  rpc AppendSCCBatch(MsgAppendSCCBatch) returns (MsgAppendSCCBatchResponse);

  // Removes a batch and all subsequent batches from SCC.
  rpc RemoveSCCBatch(MsgAppendSCCBatch) returns (MsgAppendSCCBatchResponse);
}

message MsgUpdateParams {

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1;

  // params defines the x/or/da parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {}

message MsgRegisterRollup {
  string name = 1;
  uint64 l1_to_l2_gas_ratio = 2;
}

message MsgRegisterRollupResponse {}

message MsgAppendCTCBatch {
  CTCBatch batch = 1 [(gogoproto.nullable) = false];
}

message MsgAppendCTCBatchResponse {}

message MsgEnqueue {
  uint64 gas_limit = 1;
  bytes txraw = 2;
}

message MsgEnqueueResponse {}

message MsgAppendSCCBatch {
  SCCBatch batch = 1 [(gogoproto.nullable) = false];
}

message MsgAppendSCCBatchResponse {}

message MsgRemoveSCCBatch {
  uint64 batch_index = 1;
}

message MsgRemoveSCCBatchResponse {}